fix some icon refs for nolan, add alpha and rounded backgroud to home widgets, make accordion behavior more obvious, add dropdown icons, need to fix answer logic fixed, and check ins, and shifts

--- a/client/s.css
+++ b/client/s.css
@@ -69,6 +69,7 @@ img {
 .alpha {
     background-color:rgba(250, 250, 250, .5) !important;    
     /*opacity:.5 !important;*/
+    margin-bottom: 1em !important;
 }
 
 .toast-container {
